force-app/main/default/objects/Property__c/fields/Broker_Advance_Fee_Perc__c.field-meta.xml
<CustomField>
    <fullName>Broker_Advance_Fee_Perc__c</fullName>
    <description>Bridge Use</description>
    <formula>Deal__r.Broker_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Broker Fee % on the Deal</inlineHelpText>
    <label>Broker Fee %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>