force-app/main/default/objects/Property__c/fields/Calc_AveValue__c.field-meta.xml
<CustomField>
    <fullName>Calc_AveValue__c</fullName>
    <description>Comes from the AVM Provider</description>
    <inlineHelpText>Comes from the AVM Provider (Red Bell)</inlineHelpText>
    <label>Calc AveValue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>