force-app/main/default/objects/Property__c/fields/Calculated_Initial_LTC__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Initial_LTC__c</fullName>
    <description>Bridge Reno Use
Was
TEXT(Max_Initial_LTV_LTC__c*100) + &apos;%&apos;</description>
    <formula>TEXT(ROUND(Max_Initial_Loan_Amount__c/ Acquisition_Price__c *100,0)) + &apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max Initial Loan Amount / Acquisition Price</inlineHelpText>
    <label>Calculated Initial LTC</label>
    <type>Text</type>
</CustomField>