force-app/main/default/objects/Property__c/fields/Calculated_Initial_LTV__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Initial_LTV__c</fullName>
    <description>Bridge Reno Use</description>
    <formula>TEXT(ROUND(Max_Initial_Loan_Amount__c/ Appraised_Value_Amount__c *100,0)) + &apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Max Initial Loan Amount / As Is Value</inlineHelpText>
    <label>Calculated Initial LTV</label>
    <type>Text</type>
</CustomField>