force-app/main/default/objects/Property__c/fields/Calculated_Total_Loan_LTC__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Total_Loan_LTC__c</fullName>
    <description>Bridge Reno Use</description>
    <formula>TEXT(ROUND(Approved_Advance_Amount_Max__c / ( Acquisition_Price__c +  Rehab_Budget__c)*100,0)) + &apos;%&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Approved Advance Amount / Purchase Price + Renovation Budget</inlineHelpText>
    <label>Calculated Total Loan LTC</label>
    <type>Text</type>
</CustomField>