force-app/main/default/objects/Property__c/fields/Cap_Ex__c.field-meta.xml
<CustomField>
    <fullName>Cap_Ex__c</fullName>
    <formula>Deal__r.Average_Cap_Ex_Per_Asset__c *  Deal__r.Number_of_Properties__c / Deal__r.Sub_Unit__c * Number_of_Units__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cap Ex</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>