force-app/main/default/objects/Property__c/fields/Cap_Ex_Assumption__c.field-meta.xml
<CustomField>
    <fullName>Cap_Ex_Assumption__c</fullName>
    <description>Term Use</description>
    <formula>IF(OR(
 ISPICKVAL( Property_Type__c , &quot;SFR&quot;),
 ISPICKVAL( Property_Type__c , &quot;Condo&quot;),
 ISPICKVAL( Property_Type__c , &quot;Townhome&quot;)),
600,500)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cap Ex Assumption</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>