force-app/main/default/objects/Property__c/fields/Cap_Ex_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Cap_Ex_Reserves__c</fullName>
    <label>CapExReserves</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>