force-app/main/default/objects/Property__c/fields/Capex_Escrow__c.field-meta.xml
<CustomField>
    <fullName>Capex_Escrow__c</fullName>
    <label>Capex Escrow</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>