force-app/main/default/objects/Property__c/fields/Car_Storage__c.field-meta.xml
<CustomField>
    <fullName>Car_Storage__c</fullName>
    <description>Type of car storage</description>
    <label>Car Storage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>