force-app/main/default/objects/Property__c/fields/Certificate_of_Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Certificate_of_Occupancy__c</fullName>
    <description>Bridge Use</description>
    <label>Certificate of Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>