force-app/main/default/objects/Property__c/fields/Clean_Name__c.field-meta.xml
<CustomField>
    <fullName>Clean_Name__c</fullName>
    <formula>LOWER(SUBSTITUTE(LOWER(SUBSTITUTE(LOWER(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Name, &apos;.&apos;, &apos;&apos;)  , &apos;,&apos;, &apos;&apos;), &apos;#&apos;, &apos;&apos;)), &apos; avenue&apos;, &apos; ave&apos;)), &apos; street&apos;, &apos; st&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Clean Name</label>
    <type>Text</type>
</CustomField>