force-app/main/default/objects/Property__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>