force-app/main/default/objects/Property__c/fields/Community_Name__c.field-meta.xml
<CustomField>
    <fullName>Community_Name__c</fullName>
    <description>Name of the Community that this Property belongs to
So we can track where this Property is located</description>
    <inlineHelpText>Name of the Community that this Property belongs to</inlineHelpText>
    <label>Community Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>