force-app/main/default/objects/Property__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Condition from the Appraisal</description>
    <inlineHelpText>Condition from the Appraisal</inlineHelpText>
    <label>Condition</label>
    <length>250</length>
    <type>Text</type>
</CustomField>