force-app/main/default/objects/Property__c/fields/ConstructionManagementLoanId__c.field-meta.xml
<CustomField>
    <fullName>ConstructionManagementLoanId__c</fullName>
    <description>The Land Gorilla Loan ID that coms back from the API</description>
    <externalId>true</externalId>
    <label>Land Gorilla Loan ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>