force-app/main/default/objects/Property__c/fields/Contract_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Close_Date__c</fullName>
    <description>Bridge Use</description>
    <label>Contract Close Date</label>
    <type>Date</type>
</CustomField>