force-app/main/default/objects/Property__c/fields/Cost_Per_Square_Foot__c.field-meta.xml
<CustomField>
    <fullName>Cost_Per_Square_Foot__c</fullName>
    <formula>Acquisition_Price__c / VALUE(Square_Feet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Acquisition Price / Square Feet</inlineHelpText>
    <label>Cost Per Square Foot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>