force-app/main/default/objects/Property__c/fields/Current_Asset_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Asset_Maturity_Date__c</fullName>
    <formula>IF(ISBLANK( Updated_Asset_Maturity_Date__c ),
 Asset_Maturity_Date__c,
 Updated_Asset_Maturity_Date__c )</formula>
    <label>Current Asset Maturity Date</label>
    <type>Date</type>
</CustomField>