force-app/main/default/objects/Property__c/fields/Current_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate__c</fullName>
    <inlineHelpText>Current Interest Rate from Servicer</inlineHelpText>
    <label>Current Interest Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>