force-app/main/default/objects/Property__c/fields/Current_Outstanding_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Current_Outstanding_Loan_Amount__c</fullName>
    <description>previous
IF(ISPICKVAL(Status__c, &apos;Active&apos;),
    IF(ISBLANK( Payoff_Request_Date__c ), Approved_Advance_Amount__c-Partial_Paydown__c, Approved_Advance_Amount__c)
,0)</description>
    <formula>IF(OR(
 ISPICKVAL(Status__c, &apos;Active&apos;),
 ISPICKVAL(Status__c, &apos;In Process&apos;)),
    IF(ISBLANK( Payoff_Request_Date__c ), Approved_Advance_Amount_Used__c-Partial_Paydown__c, Approved_Advance_Amount_Used__c)
,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Amount Funded - Partial Paydown</inlineHelpText>
    <label>Current Outstanding Loan Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>