force-app/main/default/objects/Property__c/fields/Current_P_I_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Current_P_I_Monthly_Payment__c</fullName>
    <label>Current P&amp;I Monthly Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>