force-app/main/default/objects/Property__c/fields/Current_UPB__c.field-meta.xml
<CustomField>
    <fullName>Current_UPB__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Current UPB</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>