force-app/main/default/objects/Property__c/fields/Currently_Leased__c.field-meta.xml
<CustomField>
    <fullName>Currently_Leased__c</fullName>
    <description>Indicates if the Property is currently being leased</description>
    <inlineHelpText>Indicates if the Property is currently being leased</inlineHelpText>
    <label>Currently Leased</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>