force-app/main/default/objects/Property__c/fields/Daily_Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Interest_Rate__c</fullName>
    <description>Bridge Use</description>
    <formula>(Initial_Disbursement__c * Deal__r.Rate__c) / 360</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Interest Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>