force-app/main/default/objects/Property__c/fields/Date_Of_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Last_Payment__c</fullName>
    <description>From Servicer</description>
    <inlineHelpText>Updated by Statebridge Servicer Integration.</inlineHelpText>
    <label>Date Of Last Payment</label>
    <type>Date</type>
</CustomField>