force-app/main/default/objects/Property__c/fields/Date_Onboarded__c.field-meta.xml
<CustomField>
    <fullName>Date_Onboarded__c</fullName>
    <description>Populated by servicer data</description>
    <inlineHelpText>Updated by Statebridge Servicer Intergration.</inlineHelpText>
    <label>Date Onboarded</label>
    <type>Date</type>
</CustomField>