force-app/main/default/objects/Property__c/fields/Days_To_Resolve__c.field-meta.xml
<CustomField>
    <fullName>Days_To_Resolve__c</fullName>
    <description>If Extension exists then Payoff Received Date - Extension Completed Date. If no Extension then Payoff Received Date - 60 days prior to Original Asset Maturity Date (use Current Asset Maturity Date if Payoff Received Date &gt; Original Asset Maturity Date).</description>
    <formula>IF( 
   AND(NOT(ISBLANK(Newest_Property_Extension__c)), NOT(ISBLANK(Newest_Property_Extension__r.Extension_Date__c)))
 , Payoff_Received_Date__c - Newest_Property_Extension__r.Extension_Date__c,
      IF(Payoff_Received_Date__c &gt; Asset_Maturity_Date__c
      , Payoff_Received_Date__c -  ( Current_Asset_Maturity_Date__c - 60 )
      ,Payoff_Received_Date__c - ( Asset_Maturity_Date__c  - 60 )
      )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If Extension exists then Payoff Received Date - Extension Completed Date. If no Extension then Payoff Received Date - 60 days prior to Original Asset Maturity Date (use Current Asset Maturity Date if Payoff Received Date &gt; Original Asset Maturity Date).</inlineHelpText>
    <label>Days To Resolve</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>