force-app/main/default/objects/Property__c/fields/dc3DisableDuplicateCheck__c.field-meta.xml
<CustomField>
    <fullName>dc3DisableDuplicateCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Disable Duplicate Check Checkbox</description>
    <label>Disable Duplicate Check</label>
    <type>Checkbox</type>
</CustomField>