force-app/main/default/objects/Property__c/fields/Deal_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>Deal_Loan_Number__c</fullName>
    <description>The Loan Number of the Deal associated to this Property</description>
    <label>Deal Loan Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>