force-app/main/default/objects/Property__c/fields/Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Deal_Owner__c</fullName>
    <formula>Deal__r.Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Owner</label>
    <type>Text</type>
</CustomField>