force-app/main/default/objects/Property__c/fields/Deal_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Record_Type__c</fullName>
    <formula>IF( 
OR(CONTAINS(Deal__r.RecordType.DeveloperName, &apos;Bridge&apos;), 
CONTAINS(Deal__r.RecordType.DeveloperName, &apos;LOC&apos;) 
), &apos;LOC_Loan&apos;, 
IF( 
CONTAINS(Deal__r.RecordType.DeveloperName, &apos;Term&apos;), 
&apos;Term_Loan&apos;, 
&apos;&apos; 
) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Record Type</label>
    <type>Text</type>
</CustomField>