force-app/main/default/objects/Property__c/fields/Deal_Refinanced_With__c.field-meta.xml
<CustomField>
    <fullName>Deal_Refinanced_With__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Refinanced With</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Properties (Deal Refinanced With)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>