force-app/main/default/objects/Property__c/fields/Deal_Rehab_Holdback_Limit__c.field-meta.xml
<CustomField>
    <fullName>Deal_Rehab_Holdback_Limit__c</fullName>
    <formula>Deal__r.Rehab_Holdback_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Rehab Holdback Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>