force-app/main/default/objects/Property__c/fields/DealID__c.field-meta.xml
<CustomField>
    <fullName>DealID__c</fullName>
    <description>Deal Loan Number from the Deal</description>
    <formula>Deal__r.Deal_Loan_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field to show the Deal Loan Number</inlineHelpText>
    <label>Deal Loan number</label>
    <type>Text</type>
</CustomField>