force-app/main/default/objects/Property__c/fields/DealStage__c.field-meta.xml
<CustomField>
    <fullName>DealStage__c</fullName>
    <formula>TEXT(Deal__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Stage</label>
    <type>Text</type>
</CustomField>