force-app/main/default/objects/Property__c/fields/Default_Rate__c.field-meta.xml
<CustomField>
    <fullName>Default_Rate__c</fullName>
    <label>Default Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>