force-app/main/default/objects/Property__c/fields/Escrow_Company_Contact__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Escrow Company Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties (Escrow Company Contact)</relationshipLabel>
    <relationshipName>Properties1</relationshipName>
    <type>Lookup</type>
</CustomField>