force-app/main/default/objects/Property__c/fields/Escrow_Company_text__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Company_text__c</fullName>
    <label>Escrow Company text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>