force-app/main/default/objects/Property__c/fields/Escrow_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Contact_Name__c</fullName>
    <label>Escrow Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>