force-app/main/default/objects/Property__c/fields/Escrow_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Contact_Phone__c</fullName>
    <label>Escrow Contact Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>