force-app/main/default/objects/Property__c/fields/Estimated_Completed_Rehab_Costs__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completed_Rehab_Costs__c</fullName>
    <label>Estimated Completed Rehab Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>