force-app/main/default/objects/Property__c/fields/Estimated_Max_Rent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Max_Rent__c</fullName>
    <description>Estimated Max Rent Retrieved from Beekin API</description>
    <label>Estimated Max Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>