force-app/main/default/objects/Property__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <inlineHelpText>Check mark if property meets exception criteria, i.e. AM Best Rating Grade &amp; Financial Class. Provide explanation in Exception Reason field.</inlineHelpText>
    <label>Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>