force-app/main/default/objects/Property__c/fields/Exception_Reason__c.field-meta.xml
<CustomField>
    <fullName>Exception_Reason__c</fullName>
    <inlineHelpText>Provide the reason property is an exception, i.e. AM Best Rating Grade &amp; Financial Class.</inlineHelpText>
    <label>Exception Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>