force-app/main/default/objects/Property__c/fields/Executed_Contract__c.field-meta.xml
<CustomField>
    <fullName>Executed_Contract__c</fullName>
    <label>Executed Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>