force-app/main/default/objects/Property__c/fields/Executed_HUD__c.field-meta.xml
<CustomField>
    <fullName>Executed_HUD__c</fullName>
    <description>Bridge Use</description>
    <label>Executed HUD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>