force-app/main/default/objects/Property__c/fields/Existing_Debt__c.field-meta.xml
<CustomField>
    <fullName>Existing_Debt__c</fullName>
    <description>Existing Debt of the Asset
Term Use</description>
    <inlineHelpText>Existing Debt of the Asset</inlineHelpText>
    <label>Existing Debt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>