force-app/main/default/objects/Property__c/fields/Expired_Y_N__c.field-meta.xml
<CustomField>
    <fullName>Expired_Y_N__c</fullName>
    <formula>Deal__r.Expired__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expired (Y/N)</label>
    <type>Text</type>
</CustomField>