force-app/main/default/objects/Property__c/fields/Extension_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Extension_Expiration_Date__c</fullName>
    <description>Bridge Use
If more time is needed for the Borrower to purchase this Property, this is the date that the extension to purchase expires.</description>
    <inlineHelpText>The date that the extension to purchase this Property expires</inlineHelpText>
    <label>Extension Expiration Date</label>
    <type>Date</type>
</CustomField>