force-app/main/default/objects/Property__c/fields/Final_Loan_Policy_Received__c.field-meta.xml
<CustomField>
    <fullName>Final_Loan_Policy_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Loan Policy Received</label>
    <type>Checkbox</type>
</CustomField>