force-app/main/default/objects/Property__c/fields/First_Funding_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Funding_Date__c</fullName>
    <description>Bridge Use</description>
    <label>First Funding Date</label>
    <type>Date</type>
</CustomField>